--- a/public/template/frontend/sections/header.phtml
+++ b/public/template/frontend/sections/header.phtml
@@ -8,11 +8,15 @@
     <div id="menubar">
         <ul id="menu">
             <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-            <li class="selected"><a href="#">Home</a></li>
-            <li><a href="#">Examples</a></li>
-            <li><a href="#">A Page</a></li>
-            <li><a href="#">Another Page</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li class="selected"><a href="<?php echo $this->url('home') ?>">Home</a></li>
+            <?php if($this->identity()): ?>
+                <li>Hello <?php echo $this->identity()->name ?></li>
+                <li><a href="<?php echo $this->url('logout') ?>">Logout</a></li>
+            <?php else: ?>
+            <li><a href="<?php echo $this->url('login') ?>">Login</a></li>
+            <li><a href="<?php echo $this->url('register') ?>">Register</a></li>
+            <?php endif; ?>
+
         </ul>
     </div>
 </div>
